--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,23 @@ body {
     color: white;
     -webkit-font-smoothing: antialiased;
   }
+
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+ }
+ 
+.card {
+    flex: 1 0 500px;
+    box-sizing: border-box;
+    margin: 1rem .25em;
+}
+
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: 0px solid black;
+  padding: 10px;
+}
