--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@ body {
     font-family: 'Muli', sans-serif;
     color: rgba(0, 0, 0, 0.8);
     font-weight: 400;  
-    background-color: grey;
-    color: white;
+    background-color:#eceff1;
+    color: #263238;
   }
   
   /* On screens that are 992px wide or less, the background color is blue */
